--- a/src/Client/Ananke.csproj
+++ b/src/Client/Ananke.csproj
@@ -14,6 +14,7 @@
       <PackageReference Include="Scalar.AspNetCore" Version="2.8.11" />
       <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
       <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
+      <PackageReference Include="Zeroconf" Version="3.7.16" />
     </ItemGroup>
 
     <ItemGroup>
