--- a/src/Client/Ananke.csproj
+++ b/src/Client/Ananke.csproj
@@ -9,12 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="MeaMod.DNS" Version="1.0.71" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.9" />
       <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.9" />
       <PackageReference Include="Scalar.AspNetCore" Version="2.8.11" />
       <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
       <PackageReference Include="Serilog.Enrichers.Thread" Version="4.0.0" />
-      <PackageReference Include="Zeroconf" Version="3.7.16" />
     </ItemGroup>
 
     <ItemGroup>
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Endpoints\" />
+      <Folder Include="Controllers\" />
     </ItemGroup>
 
 </Project>
