MDNS works, but code is messy.

--- a/src/Client/appsettings.json
+++ b/src/Client/appsettings.json
@@ -51,5 +51,11 @@
     "Properties": {
       "Application": "Ananke"
     }
+  },
+  "DiscoveryOptions": {
+    "dnsInstanceName": "Ananke._Client._tcp.local",
+    "port": 21250,
+    "priority": 0,
+    "weight": 0
   }
 }
