--- a/src/Client/appsettings.json
+++ b/src/Client/appsettings.json
@@ -53,9 +53,9 @@
     }
   },
   "DiscoveryOptions": {
-    "dnsInstanceName": "Ananke._Client._tcp.local",
-    "port": 21250,
-    "priority": 0,
-    "weight": 0
+    "DnsInstanceName": "Ananke._Client._tcp.local",
+    "Port": 21250,
+    "Priority": 0,
+    "Weight": 0
   }
 }
